--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -9,3 +9,8 @@
  
     <%= ingr.label :quantity %>
     <%= ingr.text_field :quantity %><br>
+    
+  <% end %>
+ 
+  <%= f.submit %>
+<% end %>    
